Using 1.6 Crypto property values
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1445261 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/test/resources/log4j.properties
+++ b/ws-security-common/src/test/resources/log4j.properties
@@ -17,7 +17,7 @@
 # log4j.logger.org.apache.ws.security.WSSecurityEngine=DEBUG
 # log4j.logger.org.apache.ws.security.WSSConfig=DEBUG
 # log4j.logger.org.apache.ws.security.message.token.SecurityTokenReference=DEBUG
-# log4j.logger.org.apache.ws.security.components.crypto.Merlin=DEBUG
+# log4j.logger.org.apache.ws.security.common.crypto.Merlin=DEBUG
 # log4j.logger.org.apache.xml.security.encryption.XMLCipher=DEBUG
 # log4j.logger.org.apache.xml.security.algorithms.SignatureAlgorithm=INFO
 # log4j.logger.org.apache.xml.security.signature.XMLSignature=DEBUG
