--- a/ws-security-stax/src/test/resources/transmitter-crypto.properties
+++ b/ws-security-stax/src/test/resources/transmitter-crypto.properties
@@ -1,5 +1,5 @@
-org.apache.ws.security.crypto.provider=org.apache.ws.security.components.crypto.Merlin
-org.apache.ws.security.crypto.merlin.file=transmitter.jks
-org.apache.ws.security.crypto.merlin.alias.password=default
+org.apache.ws.security.crypto.provider=org.apache.ws.security.common.crypto.Merlin
+org.apache.ws.security.crypto.merlin.keystore.file=transmitter.jks
+org.apache.ws.security.crypto.merlin.keystore.alias.password=default
 org.apache.ws.security.crypto.merlin.keystore.password=default
 org.apache.ws.security.crypto.merlin.keystore.alias=transmitter
