Fixing some OSGi imports
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1448749 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -82,14 +82,14 @@
                         <Specification-Version>${project.version}</Specification-Version>
 
                         <Export-Package>
-                              org.apache.wss4j.*;version="${project.version}"
+                              org.apache.wss4j.common.*;version="${project.version}"
                         </Export-Package>
                         <Import-Package>
-                              !org.apache.wss4j.*,
+                              !org.apache.wss4j.common.*,
                               javax.xml.crypto.*,
                               org.apache.xml.security.*,
                               org.bouncycastle.*;resolution:=optional,
-                              org.apache.jcp.xml.dsig.internal.dom.*,
+                              org.apache.jcp.xml.dsig.internal.*,
                               org.opensaml.*;resolution:=optional,
                               *;resolution:=optional
                         </Import-Package>
