--- a/ws-security-dom/pom.xml
+++ b/ws-security-dom/pom.xml
@@ -82,14 +82,15 @@
                         <Specification-Version>${project.version}</Specification-Version>
 
                         <Export-Package>
-                              org.apache.wss4j.*;version="${project.version}"
+                              org.apache.wss4j.dom.*;version="${project.version}"
                         </Export-Package>
                         <Import-Package>
-                              !org.apache.wss4j.*,
+                              !org.apache.wss4j.dom.*,
                               javax.xml.crypto.*,
                               org.apache.xml.security.*,
+                              org.apache.wss4j.common.*,
                               org.bouncycastle.*;resolution:=optional,
-                              org.apache.jcp.xml.dsig.internal.dom.*,
+                              org.apache.jcp.xml.dsig.internal.*,
                               org.opensaml.*;resolution:=optional,
                               *;resolution:=optional
                         </Import-Package>
