Don't run performance test by default
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1451429 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
         <module>ws-security-stax</module>
         <module>integration</module>
         <module>ws-security-policy-stax</module>
-        <module>cxf-integration</module>
+        <!--<module>cxf-integration</module>-->
     </modules>
 
     <build>
