--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,11 @@
                         <attach>true</attach>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.jvnet.jaxb2.maven2</groupId>
+                    <artifactId>maven-jaxb2-plugin</artifactId>
+                    <version>0.8.3</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
