--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -43,7 +43,7 @@
         <xalan.version>2.7.1</xalan.version>
         <xerces.version>2.9.1</xerces.version>
         <xmlsec.version>2.0.0-SNAPSHOT</xmlsec.version>
-        <opensaml.version>2.5.1-1</opensaml.version>
+        <opensaml.version>2.5.3</opensaml.version>
         <jcs.version>1.3</jcs.version>
         <testng.version>6.5.2</testng.version>
         <junit.version>4.8.2</junit.version>
