--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -274,6 +274,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
