--- a/pom.xml
+++ b/pom.xml
@@ -121,16 +121,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.7.1</version>
                 <configuration>
-                    <sourceEncoding>utf-8</sourceEncoding>
+                    <sourceEncoding>UTF-8</sourceEncoding>
                     <failOnViolation>true</failOnViolation>
                     <linkXRef>false</linkXRef>
+                    <verbose>true</verbose>
                     <minimumTokens>100</minimumTokens>
                     <targetJdk>${targetJdk}</targetJdk>
                     <excludes>
                         <exclude>**/CryptoBase.java, **/DOM2Writer.java</exclude>
                     </excludes>
+                    <excludeRoots>
+                        <excludeRoot>${basedir}/src/main/generated</excludeRoot>
+                    </excludeRoots>
                 </configuration>
                 <executions>
                     <execution>
@@ -257,6 +261,9 @@
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
+                        <systemPropertyVariables>
+                            <java.io.tmpdir>${basedir}/target</java.io.tmpdir>
+                        </systemPropertyVariables>
                     </configuration>
                 </plugin>
                 <plugin>
