--- a/ws-security-dom/pom.xml
+++ b/ws-security-dom/pom.xml
@@ -209,6 +209,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+         <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
