[WSS-348] - Switched StaX layer to use common ReplayCache functionaltiy
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1464926 13f79535-47bb-0310-9956-ffa450edef68

--- a/cxf-integration/pom.xml
+++ b/cxf-integration/pom.xml
@@ -51,6 +51,12 @@
             <version>${cxf.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+            <scope>compile</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.santuario</groupId>
