--- a/ws-security-dom/pom.xml
+++ b/ws-security-dom/pom.xml
@@ -73,11 +73,11 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Implementation-Title>Apache WSS4J</Implementation-Title>
+                        <Implementation-Title>Apache WSS4J DOM WS-Security</Implementation-Title>
                         <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
                         <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
                         <Implementation-Version>${project.version}</Implementation-Version>
-                        <Specification-Title>Apache WSS4J</Specification-Title>
+                        <Specification-Title>Apache WSS4J DOM WS-Security</Specification-Title>
                         <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
                         <Specification-Version>${project.version}</Specification-Version>
 
@@ -87,17 +87,16 @@
                         <Import-Package>
                               !org.apache.wss4j.dom.*,
                               javax.xml.crypto.*,
-                              org.apache.xml.security.*,
-                              org.apache.wss4j.common.*,
+                              org.slf4j.*;version="[1.7,2)",
+                              org.apache.xml.security.*;version="[2.0.0,3]",
+                              org.apache.wss4j.common.*;version="[2.0,3)",
                               org.bouncycastle.*;resolution:=optional,
                               org.apache.jcp.xml.dsig.internal.*,
-                              org.opensaml.*;resolution:=optional,
+                              org.opensaml.*;resolution:=optional;version="[2.5.0,3)",
                               *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>
-                              org.bouncycastle.jce.provider,
-                              org.apache.wss4j.dom.components.crypto,
-                              org.apache.wss4j.dom.saml
+                              org.bouncycastle.jce.provider
                         </DynamicImport-Package>
                     </instructions>
                 </configuration>
