--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -36,6 +36,7 @@
     <url>http://ws.apache.org/wss4j/</url>
 
     <properties>
+        <bcprov.version>1.47</bcprov.version>
         <ehcache.version>2.5.1</ehcache.version>
         <log4j.version>1.2.17</log4j.version>
         <neethi.version>3.0.2</neethi.version>
@@ -63,6 +64,11 @@
                 <groupId>org.apache.santuario</groupId>
                 <artifactId>xmlsec</artifactId>
                 <version>${xmlsec.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>${bcprov.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.neethi</groupId>
