--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -51,6 +51,13 @@
         <xml.apis.version>1.3.04</xml.apis.version>
         <wsdl4j.version>1.6.2</wsdl4j.version>
         <xmlunit.version>1.3</xmlunit.version>
+        
+        <!-- OSGi related properties -->
+        <wss4j.osgi.import />
+        <wss4j.osgi.symbolic.name>${project.groupId}.${project.artifactId}</wss4j.osgi.symbolic.name>
+        <wss4j.osgi.export>org.apache.wss4j.*</wss4j.osgi.export>
+        <wss4j.osgi.dynamic.import />
+        <wss4j.manifest.location>${project.build.outputDirectory}/META-INF/MANIFEST.MF</wss4j.manifest.location>
     </properties>
 
     <dependencyManagement>
@@ -192,6 +199,75 @@
                 </includes>
             </testResource>
         </testResources>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <configuration>
+                        <archive>
+                            <manifestFile>${wss4j.manifest.location}</manifestFile>
+                            <manifestEntries>
+                                <Specification-Title>${project.name}</Specification-Title>
+                                <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+                                <Implementation-Title>${project.name}</Implementation-Title>
+                                <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+                                <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                            </manifestEntries>
+                        </archive>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>versions</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>cleanVersions</goal>
+                        </goals>
+                        <configuration>
+                            <versions>
+                                <wss4j.osgi.version.clean>${project.version}</wss4j.osgi.version.clean>
+                            </versions>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>bundle-manifest</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>manifest</goal>
+                        </goals>
+                        <configuration>
+                            <instructions>
+                                <Bundle-SymbolicName>${wss4j.osgi.symbolic.name}</Bundle-SymbolicName>
+                                <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                                <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+                                <Implementation-Version>${wss4j.osgi.version.clean}</Implementation-Version>
+                                <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+                                <Specification-Version>${wss4j.osgi.version.clean}</Specification-Version>
+                                <Bundle-DocURL>http://ws.apache.org/wss4j</Bundle-DocURL>
+                                <_failok>true</_failok>
+                                <_nouses>true</_nouses>
+                                <_versionpolicy>[$(version;==;$(@)),$(version;+;$(@)))</_versionpolicy>
+                                <Export-Package>${wss4j.osgi.export}</Export-Package>
+                                <Import-Package>
+                                    ${wss4j.osgi.import},
+                                    *
+                                </Import-Package>
+                                <DynamicImport-Package>
+                                    ${wss4j.osgi.dynamic.import}
+                                </DynamicImport-Package>
+                            </instructions>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
