--- a/pom.xml
+++ b/pom.xml
@@ -367,7 +367,7 @@
 
     <properties>
         <xmlsec.version>1.5.5</xmlsec.version>
-        <opensaml.version>2.5.3</opensaml.version>
+        <opensaml.version>2.5.1-1</opensaml.version>
         <xml.apis.version>1.3.04</xml.apis.version>
         <bcprov.version>1.49</bcprov.version>
         <commons.logging.version>1.1.1</commons.logging.version>
