[WSS-466] - assure compatibility with the change in ehcache CacheManager's create method from version 2.5.1 to 2.5.2 and up
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1504398 13f79535-47bb-0310-9956-ffa450edef68

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -37,7 +37,7 @@
 
     <properties>
         <bcprov.version>1.49</bcprov.version>
-        <ehcache.version>2.5.1</ehcache.version>
+        <ehcache.version>2.7.2</ehcache.version>
         <log4j.version>1.2.17</log4j.version>
         <neethi.version>3.0.2</neethi.version>
         <slf4j.version>1.7.5</slf4j.version>
@@ -144,7 +144,7 @@
             </dependency>
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
-                <artifactId>ehcache-core</artifactId>
+                <artifactId>ehcache</artifactId>
                 <version>${ehcache.version}</version>
             </dependency>
         </dependencies>
