--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -273,7 +273,7 @@
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache-core</artifactId>
+            <artifactId>ehcache</artifactId>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
