--- a/ws-security-dom/pom.xml
+++ b/ws-security-dom/pom.xml
@@ -208,7 +208,7 @@
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache-core</artifactId>
+            <artifactId>ehcache</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
