--- a/ws-security-stax/pom.xml
+++ b/ws-security-stax/pom.xml
@@ -161,7 +161,7 @@
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache-core</artifactId>
+            <artifactId>ehcache</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
