[WSS-383] - Allow encrypted password storage in signaturePropFile  - Details forthcoming...
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1515764 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -284,6 +284,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
