--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -38,6 +38,7 @@
     <properties>
         <bcprov.version>1.49</bcprov.version>
         <ehcache.version>2.7.2</ehcache.version>
+        <jasypt.version>1.9.0</jasypt.version>
         <log4j.version>1.2.17</log4j.version>
         <neethi.version>3.0.2</neethi.version>
         <slf4j.version>1.7.5</slf4j.version>
@@ -146,6 +147,11 @@
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache</artifactId>
                 <version>${ehcache.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jasypt</groupId>
+                <artifactId>jasypt</artifactId>
+                <version>${jasypt.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
