--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -33,18 +33,10 @@
     <version>2.0-SNAPSHOT</version>
     
     <properties>
-        <!-- 
         <wss4j.osgi.import>
-                              !org.apache.wss4j.common.*,
-                              javax.xml.crypto.*,
-                              org.slf4j.*;version="[1.7,2)",
-                              org.apache.xml.security.*;version="[2.0.0,3)",
-                              org.bouncycastle.*;resolution:=optional,
-                              org.apache.jcp.xml.dsig.internal.*,
-                              org.opensaml.*;resolution:=optional;version="[2.5.0,3)",
-                              net.sf.ehcache.*;resolution:=optional;version="2.5, 3.0.0)",
-                              *;resolution:=optional
+            org.joda.time*;version="[1.6,3)"
         </wss4j.osgi.import>
+        <!--
                         <DynamicImport-Package>
                               org.bouncycastle.jce.provider,
                               org.apache.wss4j.components.crypto,
