[WSS-478] - Support the ability to cache SAML2 Assertions with "OneTimeUse" Conditions
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1524969 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -14,6 +14,7 @@ badElement = Bad element, expected \"{0}\" while got \"{1}\"
 badEncAlgo = xenc:EncryptionMethod/@Algorithm is not supported: {0}
 badReferenceURI = Reference URI is null
 badTokenType01 = Bad UsernameToken Values
+badSamlToken = An error happened processing a SAML Token: \"{0}\"
 badUsernameToken = An error happened processing a Username Token: \"{0}\"
 certpath = Error during certificate path validation: {0}
 dataRef = DataReference - referenced data not found
