[WSS-478] - Support the ability to cache SAML2 Assertions with "OneTimeUse" Conditions
Conflicts:
	src/main/java/org/apache/ws/security/handler/RequestData.java
	src/main/java/org/apache/ws/security/handler/WSHandlerConstants.java
	src/main/java/org/apache/ws/security/processor/SignatureProcessor.java
	src/test/java/org/apache/ws/security/message/ReplayTest.java
	ws-security-common/src/main/resources/messages/wss4j_errors.properties
	ws-security-dom/src/main/java/org/apache/wss4j/dom/validate/SamlAssertionValidator.java
	ws-security-stax/src/main/java/org/apache/wss4j/stax/ConfigurationConverter.java
	ws-security-stax/src/main/java/org/apache/wss4j/stax/ext/WSSSecurityProperties.java
	ws-security-stax/src/main/java/org/apache/wss4j/stax/impl/processor/input/WSSSignatureReferenceVerifyInputProcessor.java
	ws-security-stax/src/main/java/org/apache/wss4j/stax/validate/SamlTokenValidatorImpl.java
	ws-security-stax/src/test/java/org/apache/wss4j/stax/test/ReplayTest.java

git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/1_6_x-fixes@1524976 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/org/apache/ws/security/errors.properties
+++ b/src/main/resources/org/apache/ws/security/errors.properties
@@ -37,6 +37,7 @@ invalidDataRef = Cannot handle multiple data references
 invalidEmbeddedRef = The embedded Reference is invalid
 noEncryptedData = Referenced encrypted data could not be retrieved. Reference \"{0}\"
 badElement = Bad element, expected \"{0}\" while got \"{1}\"
+badSamlToken = An error happened processing a SAML Token: \"{0}\"
 badUsernameToken = An error happened processing a Username Token \"{0}\"
 badC14nAlgo = A bad canonicalization algorithm was specified
 failedAuthentication = User ({0}) not authenticated
