--- a/bindings/wsu10-binding/pom.xml
+++ b/bindings/wsu10-binding/pom.xml
@@ -23,14 +23,14 @@
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0-beta-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-bindings-wsu10</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-beta-SNAPSHOT</version>
     <name>Apache WSS4J WSU 1.0 Binding</name>
 
     <properties>
