--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -25,11 +25,11 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0-beta-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>integration</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-beta-SNAPSHOT</version>
     <name>Apache WSS4J WS-Security Integration</name>
 
     <dependencies>
