--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -29,7 +29,7 @@
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-parent</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-beta-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Apache WSS4J parent</name>
     <description>Apache WSS4J parent pom</description>
@@ -45,7 +45,7 @@
         <woodstox.core.asl.version>4.2.0</woodstox.core.asl.version>
         <xalan.version>2.7.1</xalan.version>
         <xerces.version>2.11.0</xerces.version>
-        <xmlsec.version>2.0.0-SNAPSHOT</xmlsec.version>
+        <xmlsec.version>2.0.0-beta</xmlsec.version>
         <opensaml.version>2.6.0</opensaml.version>
         <testng.version>6.5.2</testng.version>
         <junit.version>4.11</junit.version>
