--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-beta-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Apache WSS4J</name>
     <description>
