--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0-beta-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-parent</artifactId>
