--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,12 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j</artifactId>
-    <version>2.0-beta-SNAPSHOT</version>
+    <version>2.0-beta</version>
     <packaging>pom</packaging>
     <name>Apache WSS4J</name>
     <description>
@@ -71,12 +69,12 @@
     </licenses>
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/webservices/wss4j/trunk/
+            scm:svn:http://svn.apache.org/repos/asf/webservices/wss4j/tags/2_0-beta
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/trunk/
+            scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/tags/2_0-beta
         </developerConnection>
-        <url>http://svn.apache.org/repos/asf/webservices/wss4j/trunk</url>
+        <url>http://svn.apache.org/repos/asf/webservices/wss4j/tags/2_0-beta</url>
     </scm>
     <organization>
         <name>The Apache Software Foundation</name>
