--- a/bindings/wss11-binding/pom.xml
+++ b/bindings/wss11-binding/pom.xml
@@ -23,12 +23,12 @@
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
-        <version>2.0-beta</version>
+        <version>2.0-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-bindings-wss11</artifactId>
-    <version>2.0-beta</version>
+    <version>2.0-SNAPSHOT</version>
     <name>Apache WSS4J WS-Security 1.1 Binding</name>
 
     <properties>
@@ -116,10 +116,8 @@
                             <fileset dir="${project.build.directory}/generated-sources/xjc/org/xmlsoap" />
                             <fileset dir="${project.build.directory}/generated-sources/xjc/org/w3" />
                         </delete>
-                        <!--<replaceregexp file="${project.build.directory}/wss10.episode" match="&lt;\/bindings&gt;\s$" flags="s"
-                                replace="" />
-                        <replaceregexp file="${project.build.directory}/wss11.episode" match=".*&gt;" flags="s"
-                                replace="" />-->
+                        <!--<replaceregexp file="${project.build.directory}/wss10.episode" match="&lt;\/bindings&gt;\s$" flags="s" replace="" />
+                        <replaceregexp file="${project.build.directory}/wss11.episode" match=".*&gt;" flags="s" replace="" />-->
                         <xslt in="${project.build.directory}/wss11.episode" out="${project.build.directory}/wss11.episode.tmp">
                             <style>
                                 <file file="${basedir}/src/etc/bindings.xsl" />
