--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j</artifactId>
-    <version>2.0-beta</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Apache WSS4J</name>
     <description>
@@ -69,12 +69,12 @@
     </licenses>
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/webservices/wss4j/tags/2_0-beta
+            scm:svn:http://svn.apache.org/repos/asf/webservices/wss4j/trunk/
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/tags/2_0-beta
+            scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/trunk/
         </developerConnection>
-        <url>http://svn.apache.org/repos/asf/webservices/wss4j/tags/2_0-beta</url>
+        <url>http://svn.apache.org/repos/asf/webservices/wss4j/trunk</url>
     </scm>
     <organization>
         <name>The Apache Software Foundation</name>
