--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -43,7 +43,7 @@
         <woodstox.core.asl.version>4.2.0</woodstox.core.asl.version>
         <xalan.version>2.7.1</xalan.version>
         <xerces.version>2.11.0</xerces.version>
-        <xmlsec.version>2.0.0-beta</xmlsec.version>
+        <xmlsec.version>2.0.0-SNAPSHOT</xmlsec.version>
         <opensaml.version>2.6.0</opensaml.version>
         <testng.version>6.5.2</testng.version>
         <junit.version>4.11</junit.version>
