Expand the version range for joda-time
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/1_6_x-fixes@1549955 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
                               org.bouncycastle.*;resolution:=optional,
                               org.apache.jcp.xml.dsig.internal.dom.*,
                               org.opensaml.*;resolution:=optional,
+                              org.joda.time;version="[1.6,3)";resolution:=optional,
                               *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>
