Migrating to use junit instead of testng  - Performance tests remain using testng in a separate module
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1550195 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
         <module>ws-security-stax</module>
         <module>integration</module>
         <module>ws-security-policy-stax</module>
+        <!-- <module>performance</module>-->
     </modules>
 
     <build>
