Fixing some bugs that emerged from OSGi testing
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1582352 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-policy-stax/pom.xml
+++ b/ws-security-policy-stax/pom.xml
@@ -48,6 +48,7 @@
             <groupId>wsdl4j</groupId>
             <artifactId>wsdl4j</artifactId>
             <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.apache.wss4j</groupId>
