[WSS-496] - "tests" classifier artifacts dependencies should not have compile scope. Thanks to Alessio for the patch.
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1585391 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-policy-stax/pom.xml
+++ b/ws-security-policy-stax/pom.xml
@@ -64,6 +64,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-dom</artifactId>
+            <version>${project.version}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
