--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -39,6 +39,13 @@
         </dependency>
         <dependency>
             <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-dom</artifactId>
+            <version>${project.version}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.wss4j</groupId>
             <artifactId>wss4j-ws-security-stax</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
