--- a/ws-security-stax/pom.xml
+++ b/ws-security-stax/pom.xml
@@ -160,6 +160,7 @@
             <groupId>org.apache.wss4j</groupId>
             <artifactId>wss4j-ws-security-dom</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
             <classifier>tests</classifier>
         </dependency>
         <dependency>
