Consolidating Opensaml dependency in ws-security-common
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1625276 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -172,6 +172,10 @@
                     <artifactId>xalan</artifactId>
                 </exclusion>
                 <exclusion>
+                    <groupId>xalan</groupId>
+                    <artifactId>serializer</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>org.apache.xerces</groupId>
                     <artifactId>serializer</artifactId>
                 </exclusion>
