--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -34,7 +34,7 @@
     <url>http://ws.apache.org/wss4j/</url>
 
     <properties>
-        <apacheds.version>1.5.7</apacheds.version>
+        <apacheds.version>2.0.0-M19</apacheds.version>
         <bcprov.version>1.51</bcprov.version>
         <commons.compress.version>1.4.1</commons.compress.version>
         <ehcache.version>2.8.5</ehcache.version>
@@ -155,7 +155,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.directory.server</groupId>
-                <artifactId>apacheds-kerberos-shared</artifactId>
+                <artifactId>apacheds-kerberos-codec</artifactId>
                 <version>${apacheds.version}</version>
             </dependency>
             <dependency>
