Fixing streaming response errors
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1655016 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -9,6 +9,7 @@ SECURITY_TOKEN_UNAVAILABLE = Referenced security token could not be retrieved
 MESSAGE_EXPIRED = The message has expired
 FAILED_ENCRYPTION = Cannot encrypt data
 FAILED_SIGNATURE = Signature creation failed
+SECURITY_ERROR = A security error was encountered when verifying the message
 
 badElement = Bad element, expected \"{0}\" while got \"{1}\"
 badEncAlgo = xenc:EncryptionMethod/@Algorithm is not supported: {0}
